--- a/templates/listcourses.html
+++ b/templates/listcourses.html
@@ -3,7 +3,7 @@
 <h2>Courses</h2>
 <ul class=entries>
     {% for course in courses %}
-        <li><h2><a href="{{ url_for('get_course', cid=course.cid) }}">{{ course.name }}</a></h2> 
+    <li><h2><a href="{{ request.path }}/{{ course.cid }}">{{ course.name }}</a></h2> 
             {{course.score.score}}
     {% else %}
     <li><em>Unbelievable.  No courses here so far</em>
