--- a/templates/listuser.html
+++ b/templates/listuser.html
@@ -3,7 +3,7 @@
 <h2>Users</h2>
 <ul class=entries>
     {% for user in users %}
-    <li>{{ user.uname }}
+    <li><a href="{{ url_for('listuser_admin',uname=user.uname) }}">{{ user.uname }}</a>
     {% else %}
     <li><em>Unbelievable.  No users here so far</em>
     {% endfor %}
