--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<title>Poll</title>
+<title>Self-grading System</title>
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 <link href="{{ url_for('static', filename='bootstrap.css') }}" rel="stylesheet" />
 <link href="{{ url_for('static', filename='bootstrap-responsive.css') }}" rel="stylesheet" />
 <div class=page>
-    <h1>Poll</h1>
+    <h1>Self-grading System</h1>
     <div class=metanav>
         {% if session.logged_in%}
         <a href="{{ url_for('listcourses') }}">courses</a>
