--- a/static/style.css
+++ b/static/style.css
@@ -17,4 +17,4 @@ h2              { font-size: 1.2em; }
     border: 1px solid #aacbe2; }
 .error          { background: #f0d6d6; padding: 0.5em; }
 .selected       { background: #cee5f5 }
-
+.about          { border-top: 1px solid #dedede; text-align: center; color: #666}
