--- a/templates/layout.html
+++ b/templates/layout.html
@@ -30,3 +30,6 @@
     {% endfor %}
     {% block body %}{% endblock %}
 </div>
+<div class=about>
+    <p>Built by <a href="mailto:ufotalent.zju@gmail.com">Xinyi Wan</a> using <a href="http://flask.pocoo.org/">Flask</a> framework</p>
+</div>
